# utils

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTORS.json  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  Testing_Locally.ipynb  _version.py  conftest.py  pyproject.toml  pytest.ini  pytest.ini.DISABLED  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: main-deploy-docs.yml  main-publish.yml  main.yml  static-checks.yml
dcicutils/: __init__.py  _version.py  aws_utils.py  base.py  beanstalk_utils.py  boto_monkey_patching.py  boto_s3.py  boto_sqs.py  bucket_utils.py  bundle_utils.py  captured_output.py  cgap_items.py  cloudformation_utils.py  codebuild_utils.py  command_utils.py  common.py  contribution_scripts.py  contribution_utils.py  creds_utils.py  data_readers.py  data_utils.py  datetime_utils.py  deployment_utils.py  diff_utils.py  docker_utils.py  ecr_scripts.py  ecr_utils.py  ecs_utils.py  env_base.py  env_manager.py  env_scripts.py  env_utils.py  env_utils_legacy.py  es_utils.py  exceptions.py  ff_mocks.py  ff_utils.py  file_utils.py  function_cache_decorator.py  glacier_utils.py  (+38 more)
dcicutils/kibana/: dashboards.json  readme.md
dcicutils/license_policies/: c4-infrastructure.jsonc  c4-python-infrastructure.jsonc  park-lab-common-server.jsonc  park-lab-common.jsonc  park-lab-gpl-pipeline.jsonc  park-lab-pipeline.jsonc
dcicutils/scripts/: publish_to_pypi.py  run_license_checker.py  update_portal_object.py  view_portal_object.py
dcicutils/submitr/: custom_excel.py  progress_constants.py  ref_lookup_strategy.py
dcicutils/submitr/config/: custom_column_mappings.json
docs/: Makefile  examples.md  getting_started.md
docs/source/: conf.py  dcicutils.rst  examples.rst  getting_started.rst  index.rst
scripts/: check-docker  create_test_recordings  publish
test/: conftest.py  conftest_settings.py  helpers.py  helpers_for_bundles.py  test_aws_utils.py  test_base.py  test_beanstalk_utils.py  test_boto_monkey_patching.py  test_bucket_utils.py  test_bundle_utils.py  test_c4_base.py  test_cfn_utils.py  test_cgap_items.py  test_cloudformation_utils.py  test_command_utils.py  test_common.py  test_contribution_scripts.py  test_contribution_utils.py  test_creds_utils.py  test_data_utils.py  test_datetime_utils.py  test_deployment_utils.py  test_diff_utils.py  test_ecr_utils.py  test_ecs_utils.py  test_env_base.py  test_env_utils.py  test_env_utils_legacy.py  test_env_utils_orchestrated.py  test_env_utils_orchestrated_legacy_compatibility.py  test_es_utils.py  test_exceptions.py  test_ff_mocks.py  test_ff_utils.py  test_file_utils.py  test_function_cache_decorator.py  test_glacier_utils.py  test_hack_for_elasticsearch_numpy_usage.py  test_item_model_utils.py  test_item_models.py  (+29 more)
test/acceptance/: test_pkg_resources.py
test/data_files/: escaping-false.json  escaping-true.json  escaping.csv  keypairs.json  qc_metrics.json  sample_items.tabs.json  sample_items.tabs.yaml  sample_items.xlsx  sample_items2.csv  sample_items2.json  sample_items3.csv  sample_items_for_real_schemas.csv  sample_items_sheet2.csv  sample_items_sheet2.tsv  sample_items_sheet2a.jsonl  sample_items_sheet2b.jsonl  sample_items_sheet2b1.jsonl  sample_items_sheet2b2.jsonl  sample_items_sheet_2.tsv.README.text  sample_schemas.json  test_experiment_set.json
test/data_files/foursight-cgap-envs/: main.ecosystem
test/data_files/foursight-prod-envs/: blue.ecosystem  green.ecosystem  main.ecosystem
test/data_files/foursight-test-envs/: fourfront-prd  main.ecosystem
test/data_files/sample_schemas/: institution.json  project.json  user.json
test/data_files/sample_source_files/: file1.py  file2.py
test/data_files/structured_data/: analyte_20231119.csv  analyte_20231119.result.json  cell_line_20231120.csv  cell_line_20231120.result.json  file_format_20231119.result.json  library_20231119.csv  library_20231119.result.json  reference_file.flattened.json  reference_file_20231119.csv  reference_file_20231119.result.json  schemas_dump.json  sequencing_20231120.csv  sequencing_20231120.result.json  software_20231119.csv  software_20231119.result.json  some_type_four.json  some_type_one.json  some_type_three.json  some_type_two.json  submission_test_file_from_doug_20231106.result.json  submission_test_file_from_doug_20231106.xlsx  submission_test_file_from_doug_20231130.xlsx  submission_test_file_from_doug_20231204_1310.xlsx  test_uw_formatted_submission_from_doug_20231212.xlsx  test_uw_formatted_submission_from_doug_20231212b.xlsx  test_uw_gcc_colo829bl_submission_20231117.result.json  test_uw_gcc_colo829bl_submission_20231117.result.json+  test_uw_gcc_colo829bl_submission_20231117.xlsx  test_uw_gcc_colo829bl_submission_20231117_more_unaligned_reads.result.json  test_uw_gcc_colo829bl_submission_20231117_more_unaligned_reads.result.json+  test_uw_gcc_colo829bl_submission_20231117_more_unaligned_reads.xlsx  unaligned_reads_20231120.csv  unaligned_reads_20231120.result.json  workflow_20231119.csv  workflow_20231119.result.json
test/data_files/test_items/: 131106bc-8535-4448-903e-854abbbbbbbb.json  131106bc-8535-4448-903e-854af460b000.json  331106bc-8535-3338-903e-854af460b544.json  431106bc-8535-4448-903e-854af460b260.json  e2caceec-ffac-44f2-8614-8a901ce9ea0f.json
test/data_files/test_qc_metrics/: 431106bc-8535-4448-903e-854af460b260.json
test/fixtures/: sample_fixtures.py
test/ini_files/: blue.ini  cg_any.ini  cg_any_alpha.ini  cgap.ini  cgap_alfa.ini  cgap_alpha.ini  cgapdev.ini  cgaptest.ini  cgapwolf.ini  ff_any.ini  green.ini  hotseat.ini  mastertest.ini  webdev.ini  webprod.ini  webprod2.ini
test/recordings/: test_faceted_search_exp_set  test_faceted_search_users  test_post_delete_purge_links_metadata  test_upsert_metadata  unified_authentication_prod_envs_integrated_only
