[tool.poetry]
name = "dcicutils"
version = "4.0.1.1b1"
description = "Utility package for interacting with the 4DN Data Portal and other 4DN resources"
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/4dn-dcic/utils"
repository = "https://github.com/4dn-dcic/utils"
packages = [
  { include="dcicutils", from="." }
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',

    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: MIT License',

    # Relevant topics
    'Topic :: Database :: Database Engines/Servers',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.10"
boto3 = "^1.17.39"
botocore = "^1.20.39"
# The DCIC portals (cgap-portal and fourfront) are very particular about which ElasticSearch version.
# This value is intentionally pinned and must not be changed casually.
elasticsearch = "6.8.1"
aws-requests-auth = ">=0.4.2,<1"
docker = "^4.4.4"
gitpython = "^3.1.2"
pytz = ">=2020.4"
PyYAML = ">=5.1,<5.5"
requests = "^2.21.0"
rfc3986 = "^1.4.0"
structlog = "^19.2.0"
toml = ">=0.10.1,<1"
typing-extensions = ">=3.8"  # Fourfront uses 3.8
urllib3 = "^1.26.6"
webtest = "^2.0.34"

[tool.poetry.dev-dependencies]
botocore-stubs = "1.21.22"
boto3-stubs = "1.18.23"
coverage = ">=5.3.1"
coveralls = ">=3.3.1"
flake8 = ">=3.9.2"
flaky = ">=3.7.0"
pytest = ">=4.5.0"
pytest-cov = ">=2.7.1"
pytest-mock = ">=1.11.0"
pytest-runner = ">=5.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
